[feature] - 컴포넌트 제작

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <h1>header</h1>
     <div id="App"></div>
-    <script type="module" src="app.js"></script>
+    <div class="App"></div>
+    <script type="module" src="./app2.js"></script>
 </body>
 
 </html>
